--- a/public/css/register.css
+++ b/public/css/register.css
@@ -2,20 +2,20 @@ body {
     background-color: #252A34; /* Dark grey instead of black */
   }
 
-/* Custom styling for the login container */
-.login-container {
+.register-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Full viewport height */
+    height: 100vh; 
 }
-.login-box {
+
+.register-box {
     background-color: #212529;;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 410px; /* Limit the width of the form */
+    max-width: 410px;
 }
 
 .remember-me-box {
