--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,32 +1,35 @@
 body {
-  background-color: #252A34; /* Dark grey instead of black */
-}
+    background-color: #252A34; /* Dark grey instead of black */
+  }
 
-/* Custom styling for the login container */
 .login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh; /* Full viewport height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 .login-box {
-  background-color: #212529;;
-  padding: 30px;
-  border-radius: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 410px; /* Limit the width of the form */
+    background-color: #212529;;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 410px; 
 }
 
 .remember-me-box {
-  padding: 10px 0 10px 5px;
-}
+    padding: 10px 0 10px 5px;
+  }
 
 .register-suggestion {
-  padding: 10px 0 0 5px;
+    padding: 10px 0 0 5px;
 }
 
 #emailIcon {
   position: absolute;
-  margin-top: 1px; /* adjust if needed */
+  margin-top: 1px;
+}
+
+.forgetPasswordText {
+  float: right;
 }
