--- a/public/css/navbarText.css
+++ b/public/css/navbarText.css
@@ -4,3 +4,13 @@
     text-transform: uppercase;
     font-size: 35px;
 }
+
+.product-name{
+    max-width: 200px;
+    word-wrap: break-word;
+    white-space: normal;
+}
+
+.quantityMaker{
+    margin-top: 30px;
+}
