--- a/public/css/navbarText.css
+++ b/public/css/navbarText.css
@@ -14,3 +14,17 @@
 .quantityMaker{
     margin-top: 30px;
 }
+
+.profile-image {
+  width: 36px;
+  height: 36px;
+  object-fit: cover;
+  margin-top: 6px;
+}
+
+.profile-image.uploaded {
+  width: 30px;
+  height: 36px;
+  object-fit: cover;
+  border-radius: 50%;
+}
